--- a/scripts/SoilAirTemp.Rmd
+++ b/scripts/SoilAirTemp.Rmd
@@ -9,6 +9,27 @@ output: html_document
 
 Notes form email with Mike:
 Regarding the date - I think the approach you describe using climate data probably makes sense, though the maximum may be reached before mean temps drop below freezing. This paper indicates that max thaw occurs during the last two weeks in August in Utqiagvik, and I think average temps are still above freezing at this point. In my limited experience in Cherskiy, thaw depth tends to plateau around early Sept when temps are still above freezing as well. It might be the case that max thaw occurs roughly when air and soil temps are approximately similar, and once air temps get lower there can be bottom-up freezing as the soil loses heat to the atmosphere. In Cherskiy soil temps never typically do not exceed 4C. Sorry, but of a stream of consciousness here. 
+
+PCN Burned/Unburned Paired contributed data Lat lon
+Baillargeon     US        61.2704 -163.236
+Buma            US        65.71578 -149.226
+ Rocha      US 68.99 -150.28 
+
+Douglas      US 64.71577 -148.0096
+Frost      US 61.2711 -162.6291
+Gaglioti      US 67.99161 -162.0033 
+ Manies      US 63.8474 -145.717
+ 
+ O'Donnell      US 65.57626 -148.9595 
+ Natali      US 68.9908 -150.27 
+ 
+ Dieleman      CA 62.732 -115.651 
+ Gibson      CA 62.24611 -122.6356
+ 
+ Paulson      RU 68.10885 161.3355 
+
+ Sizov    RU 65.85096 74.38171 
+ Delcourt-Veraverbeke      RU 62.07247 125.8988 
 # Packages
 ```{r}
 library(tidyverse)
@@ -33,12 +54,14 @@ reg_theme = theme_bw() + theme(legend.position = "bottom") +
 ```{r}
 soil = read.csv("../data/soilAirTemp/soil_temp.csv")
 air = read.csv("../data/soilAirTemp/air_temp.csv")
+site = read.csv("../data/soilAirTemp/siteinfo.csv")
 ```
 
 
 ```{r}
 head(soil)
 head(air)
+head(site)
 ```
 
 ```{r}
@@ -47,510 +70,309 @@ unique(air$site_id)
 ```
 ```{r}
 unique(soil$st_depth)
+```
+
+# Join
+
+```{r}
+( air1 = site %>% full_join(y=air, by="site_id") )
+( soil1 = site %>% full_join(y=soil, by="site_id") )
+```
+
+# Filter by hemisphere
+
+```{r}
+( air_west = air1 %>% filter(lon < 0) %>% drop_na(air_t) %>% mutate(combo = as.integer(interaction(lat,lon,drop = TRUE))))
+( soil_west = soil1 %>% filter(lon < 0) %>% drop_na(soil_t) %>% mutate(combo = as.integer(interaction(lat,lon,drop = TRUE))))
+( air_east = air1 %>% filter(lon > 0) %>% drop_na(air_t) %>% mutate(combo = as.integer(interaction(lat,lon,drop = TRUE))))
+( soil_east = soil1 %>% filter(lon > 0) %>% drop_na(soil_t)%>% mutate(combo = as.integer(interaction(lat,lon,drop = TRUE))))
+```
+
+# Unique pairs of lat lon
+## East hemisphere
+ Paulson      RU 68.10885 161.3355 (combo 11)
+ Sizov    RU 65.85096 74.38171 
+ Delcourt-Veraverbeke      RU 62.07247 125.8988 
+```{r}
+unique(air_east[c( "site_id","lat","lon", "combo")])
+```
+
+## Western Hemisphere
+Canda
+ Dieleman      CA 62.732 -115.651 (combo 110)
+ Gibson      CA 62.24611 -122.6356 (combo 104)
+ 
+US
+Baillargeon     US        61.2704     -163.236
+Buma            US        65.71578    -149.226        (combo 60)
+Rocha           US        68.99       -150.28         (combo 45)
+Douglas         US        64.71577    -148.0096       (combo 85)
+Frost           US        61.2711     -162.6291
+Gaglioti        US        67.99161    -162.0033 
+Manies          US        63.8474     -145.717
+O'Donnell       US        65.57626    -148.9595 
+Natali          US        68.9908     -150.27         (combo 46)
+```{r}
+unique(air_west[c( "site_id","lat","lon", "combo")])
+```
+# Filter based on matching temperature for date
+## Eastern
+```{r}
+soil_east %>% 
+    filter(combo ==11) %>%
+    filter(st_depth < 60) %>%
+  filter(doy_st %in% (200:285)) %>%
+  group_by(st_depth, doy_st) %>%
+  filter(soil_t==soil_t)
+
+
+air_east %>% 
+  filter(combo ==11) %>%
+  filter(doy_ai %in% (200:285)) %>%
+  filter(air_t<0)
 
 ```
-# filter some specifics
+
+
+
+# Summarize & Plot
 ```{r}
-(
-  x = soil %>% filter(site_id == 104) 
+theme_set(theme_minimal())
+```
+## Eastern Hemisphere
+
+
+```{r}
+( soilEastLat1 = soil_east %>% 
+    filter(combo ==11) %>%
+    filter(st_depth < 60) %>%
+  filter(doy_st %in% (200:285)) %>%
+  group_by(combo, st_depth, doy_st) %>%
+  summarize(mean_soil_t = mean(soil_t))
 )
 
-unique(x$st_depth)
-```
-
-```{r}
-(
-  soil1 = soil %>% filter(st_depth == 0) %>% drop_na()
+( airEastLat1 = air_east %>% 
+  filter(combo ==11) %>%
+  filter(doy_ai %in% (200:285)) %>%
+  group_by(combo, doy_ai) %>%
+  summarize(mean_air_t = mean(air_t))
 )
 ```
+
 ```{r}
-unique(soil1$site_id)
+
+  ggplot(data = soilEastLat1, aes(x=doy_st, y=mean_soil_t, color=as.factor(st_depth)))  +
+  geom_line() +
+  geom_line(data = airEastLat1, aes(x=doy_ai, y=mean_air_t),color = "black") +
+  geom_vline(xintercept=240, colour = "#fdae61") + 
+  geom_vline(xintercept=254, colour="#fdae61") + 
+  geom_vline(xintercept=264, colour="#fdae61") + 
+  geom_hline(yintercept=0, colour="#d7191c") + 
+  scale_color_viridis_d(name = "Depth (cm)") +
+  xlab("Julian date") +
+  ylab("Temperature (Celecius)") + 
+  geom_text(aes(x=240, y= 20, label="Russia (68.75556, 161.45570)"), colour = "black") +
+  theme(legend.position = "bottom")
+
+
 ```
-12	63.291974	-129.838532 5
-16	63.314262	-129.790731	5
-15	63.400222	-129.665567	5
-13	63.266397	-130.100634	5
-17	58.727161	-93.836367	5
-18	58.732721	-93.805305	5
-19	57.47799	-93.24227	  5
-20	58.750521	-93.855696	5
-14	63.266653	-130.097406	5
-100	77.4915	-69.401972	  20
-190	69.253333	-53.513889	25
+
+
+## Western Hemisphere
+### Canada
+111, 110
 ```{r}
-soil %>% filter(site_id ==29) %>% filter(doy_st %in% (200:300)) 
+target_ca = c(104)
 ```
 
 ```{r}
-soil %>% 
-  filter(site_id ==13) %>%  
-  filter(st_depth == 0) %>%
-  filter(doy_st %in% (235:270))
-```
-
-# Plots
-## Site 104
-```{r}
-soil104 = soil %>% 
-  filter(site_id ==104) %>% 
-  filter(st_depth == 4) %>%
+( soilWestLat1 = soil_west %>% 
+    filter(combo %in% target_ca) %>%
+    filter(st_depth < 60) %>%
   filter(doy_st %in% (200:285)) %>%
-  group_by(doy_st) %>%
+  group_by(combo, st_depth, doy_st) %>%
   summarize(mean_soil_t = mean(soil_t))
+)
 
-air109 = air %>% 
-  filter(site_id ==109) %>% 
+( airWestLat1 = air_west %>% 
+  filter(combo %in% target_ca) %>%
   filter(doy_ai %in% (200:285)) %>%
-  group_by(doy_ai) %>%
+  group_by(combo, doy_ai) %>%
   summarize(mean_air_t = mean(air_t))
+)
+```
+
+```{r}
+
+  ggplot(data = soilWestLat1, aes(x=doy_st, y=mean_soil_t, color=as.factor(st_depth)))  +
+  geom_line() +
+  geom_line(data = airWestLat1, aes(x=doy_ai, y=mean_air_t),color = "black") +
+  geom_vline(xintercept=215, colour = "#fdae61") + 
+  geom_vline(xintercept=225, colour = "#fdae61") + 
+  geom_vline(xintercept=257, colour = "#fdae61") + 
+  geom_vline(xintercept=264, colour="#fdae61") +
+  geom_hline(yintercept=0, colour="#d7191c") + 
+  facet_wrap(~combo, nrow = 3) +
+  scale_color_viridis_d(name = "Depth (cm)") +
+  xlab("Julian date") +
+  ylab("Temperature (Celecius)") +
+  geom_text(aes(x=240, y= 20, label=""), colour = "black") +
+  theme(legend.position = "bottom") +
+  geom_text(aes(x=240, y= 20, label="Canada (62.24500, -121.57100)"), colour = "black") 
+	
+
 
 ```
 
-  stat_summary(aes(y = soil_t,group=1), fun.y=mean, colour="#2c7bb6", geom="line",group=1) +
+### Canada
+```{r}
+target_us = c(45, 46, 60, 85)
+```
+
+```{r}
+( soilWestLat2 = soil_west %>% 
+    filter(combo ==45) %>%
+    filter(st_depth < 60) %>%
+  filter(doy_st %in% (200:285)) %>%
+  group_by(combo, st_depth, doy_st) %>%
+  summarize(mean_soil_t = mean(soil_t))
+)
+
+( airWestLat2 = air_west %>% 
+  filter(combo ==45) %>%
+  filter(doy_ai %in% (200:285)) %>%
+  group_by(combo, doy_ai) %>%
+  summarize(mean_air_t = mean(air_t))
+)
+```
+
 ```{r}
 
-  ggplot()  +
-  geom_line(data = soil109, aes(x=doy_st, y=mean_soil_t),color="#2c7bb6") +
-  geom_line(data = air109, aes(x=doy_ai, y=mean_air_t),color = "#abdda4") +
+  ggplot(data = soilWestLat2, aes(x=doy_st, y=mean_soil_t, color=as.factor(st_depth)))  +
+  geom_line() +
+  geom_line(data = airWestLat2, aes(x=doy_ai, y=mean_air_t),color = "black") +
   geom_vline(xintercept=215, colour = "#fdae61") + # Aug 3
   geom_vline(xintercept=260, colour="#fdae61") + #Sept 24
   geom_hline(yintercept=0, colour="#d7191c") + 
-  geom_hline(yintercept=4, colour="#d7191c") + #Sept 24
-  reg_theme +
+  scale_color_viridis_d(name = "Depth (cm)") +
   xlab("Julian date") +
-  ylab("Mean Air Temperature (Celecius)") +
+  ylab("Temperature (Celecius)") +
   geom_text(aes(x=215, y=-5,label="Aug 3"), colour = "black", angle=90, vjust = -0.5, size=2) +
   geom_text(aes(x=260, y=-5, label="Sept 17"),colour = "black", angle=90, vjust = -0.5, size=2) + 
-  geom_text(aes(x=240, y= 20, label="Soil Temperature\n @ depth 4cm\n(68.31, 161.35)"), colour = "black") 
+  geom_text(aes(x=240, y= 20, label=""), colour = "black") +
+  theme(legend.position = "right")
 
 
 ```
 
-## Site 109
 ```{r}
-soil109 = soil %>% 
-  filter(site_id ==109) %>% 
+( soilWestLat3 = soil_west %>% 
+    filter(combo ==46) %>%
+    filter(st_depth < 60) %>%
   filter(doy_st %in% (200:285)) %>%
-  group_by(doy_st) %>%
+  group_by(combo, st_depth, doy_st) %>%
   summarize(mean_soil_t = mean(soil_t))
+)
 
-air109 = air %>% 
-  filter(site_id ==109) %>% 
+( airWestLat3 = air_west %>% 
+  filter(combo ==46) %>%
   filter(doy_ai %in% (200:285)) %>%
-  group_by(doy_ai) %>%
+  group_by(combo, doy_ai) %>%
   summarize(mean_air_t = mean(air_t))
-
+)
 ```
 
-  stat_summary(aes(y = soil_t,group=1), fun.y=mean, colour="#2c7bb6", geom="line",group=1) +
 ```{r}
 
-  ggplot()  +
-  geom_line(data = soil109, aes(x=doy_st, y=mean_soil_t),color="#2c7bb6") +
-  geom_line(data = air109, aes(x=doy_ai, y=mean_air_t),color = "#abdda4") +
+  ggplot(data = soilWestLat3, aes(x=doy_st, y=mean_soil_t, color=as.factor(st_depth)))  +
+  geom_line() +
+  geom_line(data = airWestLat3, aes(x=doy_ai, y=mean_air_t),color = "black") +
   geom_vline(xintercept=215, colour = "#fdae61") + # Aug 3
   geom_vline(xintercept=260, colour="#fdae61") + #Sept 24
   geom_hline(yintercept=0, colour="#d7191c") + 
-  geom_hline(yintercept=4, colour="#d7191c") + #Sept 24
-  reg_theme +
+  facet_wrap(~combo, nrow = 2) +
+  scale_color_viridis_d(name = "Depth (cm)") +
   xlab("Julian date") +
-  ylab("Mean Air Temperature (Celecius)") +
+  ylab("Temperature (Celecius)") +
   geom_text(aes(x=215, y=-5,label="Aug 3"), colour = "black", angle=90, vjust = -0.5, size=2) +
   geom_text(aes(x=260, y=-5, label="Sept 17"),colour = "black", angle=90, vjust = -0.5, size=2) + 
-  geom_text(aes(x=240, y= 20, label="Soil Temperature\n @ depth 20cm\n(66.83, 65.98)"), colour = "black") 
+  geom_text(aes(x=240, y= 20, label=""), colour = "black") +
+  theme(legend.position = "right")
 
 
 ```
-## Site 12
+
 ```{r}
-soil12 = soil %>% 
-  filter(site_id ==12) %>% 
-  filter(st_depth == 0) %>%
+( soilWestLat4 = soil_west %>% 
+    filter(combo ==60) %>%
+    filter(st_depth < 60) %>%
   filter(doy_st %in% (200:285)) %>%
-  group_by(doy_st) %>%
+  group_by(combo, st_depth, doy_st) %>%
   summarize(mean_soil_t = mean(soil_t))
+)
 
-air12 = air %>% 
-  filter(site_id ==12) %>% 
+( airWestLat4 = air_west %>% 
+  filter(combo ==60) %>%
   filter(doy_ai %in% (200:285)) %>%
-  group_by(doy_ai) %>%
+  group_by(combo, doy_ai) %>%
   summarize(mean_air_t = mean(air_t))
-
+)
 ```
 
-  stat_summary(aes(y = soil_t,group=1), fun.y=mean, colour="#2c7bb6", geom="line",group=1) +
 ```{r}
 
-  ggplot()  +
-  geom_line(data = soil12, aes(x=doy_st, y=mean_soil_t),color="#2c7bb6") +
-  geom_line(data = air12, aes(x=doy_ai, y=mean_air_t),color = "#abdda4") +
+  ggplot(data = soilWestLat4, aes(x=doy_st, y=mean_soil_t, color=as.factor(st_depth)))  +
+  geom_line() +
+  geom_line(data = airWestLat4, aes(x=doy_ai, y=mean_air_t),color = "black") +
   geom_vline(xintercept=215, colour = "#fdae61") + # Aug 3
   geom_vline(xintercept=260, colour="#fdae61") + #Sept 24
   geom_hline(yintercept=0, colour="#d7191c") + 
-  geom_hline(yintercept=4, colour="#d7191c") + #Sept 24
-  reg_theme +
+  facet_wrap(~combo, nrow = 2) +
+  scale_color_viridis_d(name = "Depth (cm)") +
   xlab("Julian date") +
-  ylab("Mean Air Temperature (Celecius)") +
+  ylab("Temperature (Celecius)") +
   geom_text(aes(x=215, y=-5,label="Aug 3"), colour = "black", angle=90, vjust = -0.5, size=2) +
   geom_text(aes(x=260, y=-5, label="Sept 17"),colour = "black", angle=90, vjust = -0.5, size=2) + 
-  geom_text(aes(x=240, y= 10, label="Soil Temperature\n(63.291974, -129.838532)"), colour = "black") 
+  geom_text(aes(x=240, y= 20, label=""), colour = "black") +
+  theme(legend.position = "right")
 
 
 ```
 
-## Site 13
-
 ```{r}
-soil13 = soil %>% 
-  filter(site_id ==13) %>% 
-  filter(st_depth == 0) %>%
+( soilWestLat5 = soil_west %>% 
+    filter(combo ==85) %>%
+    filter(st_depth < 60) %>%
   filter(doy_st %in% (200:285)) %>%
-  group_by(doy_st) %>%
+  group_by(combo, st_depth, doy_st) %>%
   summarize(mean_soil_t = mean(soil_t))
+)
 
-air13 = air %>% 
-  filter(site_id ==13) %>% 
+( airWestLat5 = air_west %>% 
+  filter(combo ==85) %>%
   filter(doy_ai %in% (200:285)) %>%
-  group_by(doy_ai) %>%
+  group_by(combo, doy_ai) %>%
   summarize(mean_air_t = mean(air_t))
-
+)
 ```
+
 ```{r}
 
-  ggplot()  +
-  geom_line(data = soil13, aes(x=doy_st, y=mean_soil_t),color="#2c7bb6") +
-  geom_line(data = air13, aes(x=doy_ai, y=mean_air_t),color = "#abdda4") +
+  ggplot(data = soilWestLat5, aes(x=doy_st, y=mean_soil_t, color=as.factor(st_depth)))  +
+  geom_line() +
+  geom_line(data = airWestLat5, aes(x=doy_ai, y=mean_air_t),color = "black") +
   geom_vline(xintercept=215, colour = "#fdae61") + # Aug 3
   geom_vline(xintercept=260, colour="#fdae61") + #Sept 24
-  geom_hline(yintercept=0, colour="#d7191c") + #Sept 24
-  geom_hline(yintercept=4, colour="#d7191c") + #Sept 24
-  reg_theme +
+  geom_hline(yintercept=0, colour="#d7191c") + 
+  facet_wrap(~combo, nrow = 2) +
+  scale_color_viridis_d(name = "Depth (cm)") +
   xlab("Julian date") +
-  ylab("Mean Air Temperature (Celecius)") +
+  ylab("Temperature (Celecius)") +
   geom_text(aes(x=215, y=-5,label="Aug 3"), colour = "black", angle=90, vjust = -0.5, size=2) +
   geom_text(aes(x=260, y=-5, label="Sept 17"),colour = "black", angle=90, vjust = -0.5, size=2) + 
-  geom_text(aes(x=240, y= 10, label="Soil Temperature\n(63.266397, -130.100634)"), colour = "black") 
+  geom_text(aes(x=240, y= 20, label=""), colour = "black") +
+  theme(legend.position = "right")
 
 
 ```
 
-
-## Site 14
-```{r}
-soil14 = soil %>% 
-  filter(site_id ==14) %>% 
-  filter(st_depth == 0) %>%
-  filter(doy_st %in% (200:285)) %>%
-  group_by(doy_st) %>%
-  summarize(mean_soil_t = mean(soil_t))
-
-air14 = air %>% 
-  filter(site_id ==14) %>% 
-  filter(doy_ai %in% (200:285)) %>%
-  group_by(doy_ai) %>%
-  summarize(mean_air_t = mean(air_t))
-
-```
-```{r}
-
-  ggplot()  +
-  geom_line(data = soil14, aes(x=doy_st, y=mean_soil_t),color="#2c7bb6") +
-  geom_line(data = air14, aes(x=doy_ai, y=mean_air_t),color = "#abdda4") +
-  geom_vline(xintercept=215, colour = "#fdae61") + # Aug 3
-  geom_vline(xintercept=260, colour="#fdae61") + #Sept 24
-  geom_hline(yintercept=0, colour="#d7191c") + #Sept 24
-  geom_hline(yintercept=4, colour="#d7191c") + #Sept 24
-  reg_theme +
-  xlab("Julian date") +
-  ylab("Mean Air Temperature (Celecius)") +
-  geom_text(aes(x=215, y=-5,label="Aug 3"), colour = "black", angle=90, vjust = -0.5, size=2) +
-  geom_text(aes(x=260, y=-5, label="Sept 17"),colour = "black", angle=90, vjust = -0.5, size=2) + 
-  geom_text(aes(x=240, y= 10, label="Soil Temperature\n(63.266653, -130.097406)"), colour = "black") 
-
-
-```
-
-
-## Site 15
-```{r}
-soil15 = soil %>% 
-  filter(site_id ==15) %>% 
-  filter(st_depth == 0) %>%
-  filter(doy_st %in% (200:285)) %>%
-  group_by(doy_st) %>%
-  summarize(mean_soil_t = mean(soil_t))
-
-air15 = air %>% 
-  filter(site_id ==15) %>% 
-  filter(doy_ai %in% (200:285)) %>%
-  group_by(doy_ai) %>%
-  summarize(mean_air_t = mean(air_t))
-
-```
-```{r}
-
-  ggplot()  +
-  geom_line(data = soil15, aes(x=doy_st, y=mean_soil_t),color="#2c7bb6") +
-  geom_line(data = air15, aes(x=doy_ai, y=mean_air_t),color = "#abdda4") +
-  geom_vline(xintercept=215, colour = "#fdae61") + # Aug 3
-  geom_vline(xintercept=260, colour="#fdae61") + #Sept 24
-  geom_hline(yintercept=0, colour="#d7191c") + #Sept 24
-  geom_hline(yintercept=4, colour="#d7191c") + #Sept 24
-  reg_theme +
-  xlab("Julian date") +
-  ylab("Mean Air Temperature (Celecius)") +
-  geom_text(aes(x=215, y=-5,label="Aug 3"), colour = "black", angle=90, vjust = -0.5, size=2) +
-  geom_text(aes(x=260, y=-5, label="Sept 17"),colour = "black", angle=90, vjust = -0.5, size=2) + 
-  geom_text(aes(x=240, y= 10, label="Soil Temperature\n(63.400222, -129.665567)"), colour = "black") 
-
-
-```
-
-## Site 16
-```{r}
-soil16 = soil %>% 
-  filter(site_id ==16) %>% 
-  filter(st_depth == 0) %>%
-  filter(doy_st %in% (200:285)) %>%
-  group_by(doy_st) %>%
-  summarize(mean_soil_t = mean(soil_t))
-
-air16 = air %>% 
-  filter(site_id ==16) %>% 
-  filter(doy_ai %in% (200:285)) %>%
-  group_by(doy_ai) %>%
-  summarize(mean_air_t = mean(air_t))
-
-```
-```{r}
-
-  ggplot()  +
-  geom_line(data = soil16, aes(x=doy_st, y=mean_soil_t),color="#2c7bb6") +
-  geom_line(data = air16, aes(x=doy_ai, y=mean_air_t),color = "#abdda4") +
-  geom_vline(xintercept=215, colour = "#fdae61") + # Aug 3
-  geom_vline(xintercept=260, colour="#fdae61") + #Sept 24
-  geom_hline(yintercept=0, colour="#d7191c") + #Sept 24
-  geom_hline(yintercept=4, colour="#d7191c") + #Sept 24
-  reg_theme +
-  xlab("Julian date") +
-  ylab("Mean Air Temperature (Celecius)") +
-  geom_text(aes(x=215, y=-5,label="Aug 3"), colour = "black", angle=90, vjust = -0.5, size=2) +
-  geom_text(aes(x=260, y=-5, label="Sept 17"),colour = "black", angle=90, vjust = -0.5, size=2) + 
-  geom_text(aes(x=240, y= 10, label="Soil Temperature\n(63.314262, -129.790731)"), colour = "black") 
-
-
-```
-
-
-## Site 17
-```{r}
-soil17 = soil %>% 
-  filter(site_id ==17) %>% 
-  filter(st_depth == 0) %>%
-  filter(doy_st %in% (200:285)) %>%
-  group_by(doy_st) %>%
-  summarize(mean_soil_t = mean(soil_t))
-
-air17 = air %>% 
-  filter(site_id ==17) %>% 
-  filter(doy_ai %in% (200:285)) %>%
-  group_by(doy_ai) %>%
-  summarize(mean_air_t = mean(air_t))
-
-```
-```{r}
-
-  ggplot()  +
-  geom_line(data = soil17, aes(x=doy_st, y=mean_soil_t),color="#2c7bb6") +
-  geom_line(data = air17, aes(x=doy_ai, y=mean_air_t),color = "#abdda4") +
-  geom_vline(xintercept=215, colour = "#fdae61") + # Aug 3
-  geom_vline(xintercept=260, colour="#fdae61") + #Sept 24
-  geom_hline(yintercept=0, colour="#d7191c") + #Sept 24
-  geom_hline(yintercept=4, colour="#d7191c") + #Sept 24
-  reg_theme +
-  xlab("Julian date") +
-  ylab("Mean Air Temperature (Celecius)") +
-  geom_text(aes(x=215, y=-5,label="Aug 3"), colour = "black", angle=90, vjust = -0.5, size=2) +
-  geom_text(aes(x=260, y=-5, label="Sept 17"),colour = "black", angle=90, vjust = -0.5, size=2) + 
-  geom_text(aes(x=240, y= 10, label="Soil Temperature\n(58.727161, -93.836367)"), colour = "black") 
-
-
-```
-
-## Site 18
-```{r}
-soil18 = soil %>% 
-  filter(site_id ==18) %>% 
-  filter(st_depth == 0) %>%
-  filter(doy_st %in% (200:285)) %>%
-  group_by(doy_st) %>%
-  summarize(mean_soil_t = mean(soil_t))
-
-air18 = air %>% 
-  filter(site_id ==18) %>% 
-  filter(doy_ai %in% (200:285)) %>%
-  group_by(doy_ai) %>%
-  summarize(mean_air_t = mean(air_t))
-
-```
-```{r}
-
-  ggplot()  +
-  geom_line(data = soil18, aes(x=doy_st, y=mean_soil_t),color="#2c7bb6") +
-  geom_line(data = air18, aes(x=doy_ai, y=mean_air_t),color = "#abdda4") +
-  geom_vline(xintercept=215, colour = "#fdae61") + # Aug 3
-  geom_vline(xintercept=260, colour="#fdae61") + #Sept 24
-  geom_hline(yintercept=0, colour="#d7191c") + #Sept 24
-  geom_hline(yintercept=4, colour="#d7191c") + #Sept 24
-  reg_theme +
-  xlab("Julian date") +
-  ylab("Mean Air Temperature (Celecius)") +
-  geom_text(aes(x=215, y=-5,label="Aug 3"), colour = "black", angle=90, vjust = -0.5, size=2) +
-  geom_text(aes(x=260, y=-5, label="Sept 17"),colour = "black", angle=90, vjust = -0.5, size=2) + 
-  geom_text(aes(x=240, y= 10, label="Soil Temperature\n(58.732721, -93.805305)"), colour = "black") 
-
-
-```
-
-
-## Site 19
-```{r}
-soil19 = soil %>% 
-  filter(site_id ==19) %>% 
-  filter(st_depth == 0) %>%
-  filter(doy_st %in% (200:285)) %>%
-  group_by(doy_st) %>%
-  summarize(mean_soil_t = mean(soil_t))
-
-air19 = air %>% 
-  filter(site_id ==19) %>% 
-  filter(doy_ai %in% (200:285)) %>%
-  group_by(doy_ai) %>%
-  summarize(mean_air_t = mean(air_t))
-
-```
-```{r}
-
-  ggplot()  +
-  geom_line(data = soil19, aes(x=doy_st, y=mean_soil_t),color="#2c7bb6") +
-  geom_line(data = air19, aes(x=doy_ai, y=mean_air_t),color = "#abdda4") +
-  geom_vline(xintercept=215, colour = "#fdae61") + # Aug 3
-  geom_vline(xintercept=260, colour="#fdae61") + #Sept 24
-  geom_hline(yintercept=0, colour="#d7191c") + #Sept 24
-  geom_hline(yintercept=4, colour="#d7191c") + #Sept 24
-  reg_theme +
-  xlab("Julian date") +
-  ylab("Mean Air Temperature (Celecius)") +
-  geom_text(aes(x=215, y=-5,label="Aug 3"), colour = "black", angle=90, vjust = -0.5, size=2) +
-  geom_text(aes(x=260, y=-5, label="Sept 17"),colour = "black", angle=90, vjust = -0.5, size=2) + 
-  geom_text(aes(x=240, y= 10, label="Soil Temperature\n(57.47799, -93.24227)"), colour = "black") 
-
-
-```
-
-
-
-## Site 20
-```{r}
-soil20 = soil %>% 
-  filter(site_id ==20) %>% 
-  filter(st_depth == 0) %>%
-  filter(doy_st %in% (200:285)) %>%
-  group_by(doy_st) %>%
-  summarize(mean_soil_t = mean(soil_t))
-
-air20 = air %>% 
-  filter(site_id ==20) %>% 
-  filter(doy_ai %in% (200:285)) %>%
-  group_by(doy_ai) %>%
-  summarize(mean_air_t = mean(air_t))
-
-```
-```{r}
-
-  ggplot()  +
-  geom_line(data = soil20, aes(x=doy_st, y=mean_soil_t),color="#2c7bb6") +
-  geom_line(data = air20, aes(x=doy_ai, y=mean_air_t),color = "#abdda4") +
-  geom_vline(xintercept=215, colour = "#fdae61") + # Aug 3
-  geom_vline(xintercept=260, colour="#fdae61") + #Sept 24
-  geom_hline(yintercept=0, colour="#d7191c") + #Sept 24
-  geom_hline(yintercept=4, colour="#d7191c") + #Sept 24
-  reg_theme +
-  xlab("Julian date") +
-  ylab("Mean Air Temperature (Celecius)") +
-  geom_text(aes(x=215, y=-5,label="Aug 3"), colour = "black", angle=90, vjust = -0.5, size=2) +
-  geom_text(aes(x=260, y=-5, label="Sept 17"),colour = "black", angle=90, vjust = -0.5, size=2) + 
-  geom_text(aes(x=240, y= 10, label="Soil Temperature\n(58.750521, -93.855696)"), colour = "black") 
-
-
-```
-
-## Site 100
-```{r}
-soil100 = soil %>% 
-  filter(site_id ==100) %>% 
-  filter(st_depth == 0) %>%
-  filter(doy_st %in% (200:285)) %>%
-  group_by(doy_st) %>%
-  summarize(mean_soil_t = mean(soil_t))
-
-air100 = air %>% 
-  filter(site_id ==100) %>% 
-  filter(doy_ai %in% (200:285)) %>%
-  group_by(doy_ai) %>%
-  summarize(mean_air_t = mean(air_t))
-
-```
-```{r}
-
-  ggplot()  +
-  geom_line(data = soil100, aes(x=doy_st, y=mean_soil_t),color="#2c7bb6") +
-  geom_line(data = air100, aes(x=doy_ai, y=mean_air_t),color = "#abdda4") +
-  geom_vline(xintercept=215, colour = "#fdae61") + # Aug 3
-  geom_vline(xintercept=260, colour="#fdae61") + #Sept 24
-  geom_hline(yintercept=0, colour="#d7191c") + #Sept 24
-  geom_hline(yintercept=4, colour="#d7191c") + #Sept 24
-  reg_theme +
-  xlab("Julian date") +
-  ylab("Mean Air Temperature (Celecius)") +
-  geom_text(aes(x=215, y=-5,label="Aug 3"), colour = "black", angle=90, vjust = -0.5, size=2) +
-  geom_text(aes(x=260, y=-5, label="Sept 17"),colour = "black", angle=90, vjust = -0.5, size=2) + 
-  geom_text(aes(x=240, y= 10, label="Soil Temperature\n(77.4915, -69.401972	)"), colour = "black") 
-
-
-```
-
-## Site 190
-```{r}
-soil190 = soil %>% 
-  filter(site_id ==190) %>% 
-  filter(st_depth == 0) %>%
-  filter(doy_st %in% (200:285)) %>%
-  group_by(doy_st) %>%
-  summarize(mean_soil_t = mean(soil_t))
-
-air190 = air %>% 
-  filter(site_id ==190) %>% 
-  filter(doy_ai %in% (200:285)) %>%
-  group_by(doy_ai) %>%
-  summarize(mean_air_t = mean(air_t))
-
-```
-```{r}
-
-  ggplot()  +
-  geom_line(data = soil190, aes(x=doy_st, y=mean_soil_t),color="#2c7bb6") +
-  geom_line(data = air190, aes(x=doy_ai, y=mean_air_t),color = "#abdda4") +
-  geom_vline(xintercept=215, colour = "#fdae61") + # Aug 3
-  geom_vline(xintercept=260, colour="#fdae61") + #Sept 24
-  geom_hline(yintercept=0, colour="#d7191c") + #Sept 24
-  geom_hline(yintercept=4, colour="#d7191c") + #Sept 24
-  reg_theme +
-  xlab("Julian date") +
-  ylab("Mean Air Temperature (Celecius)") +
-  geom_text(aes(x=215, y=-5,label="Aug 3"), colour = "black", angle=90, vjust = -0.5, size=2) +
-  geom_text(aes(x=260, y=-5, label="Sept 17"),colour = "black", angle=90, vjust = -0.5, size=2) + 
-  geom_text(aes(x=240, y= 10, label="Soil Temperature\n(69.253333, -53.513889)"), colour = "black") 
-
-
-```
