--- a/scripts/SoilAirTemp.Rmd
+++ b/scripts/SoilAirTemp.Rmd
@@ -34,6 +34,8 @@ Gaglioti      US 67.99161 -162.0033
 ```{r}
 library(tidyverse)
 library(lubridate)
+library(RColorBrewer)
+library(cowplot)
 ```
 # Graph theme
 ```{r}
@@ -75,18 +77,33 @@ unique(soil$st_depth)
 # Join
 
 ```{r}
-( air1 = site %>% full_join(y=air, by="site_id") )
-( soil1 = site %>% full_join(y=soil, by="site_id") )
+( air1 = site %>% full_join(y=air, by="site_id") %>% rename(doy = doy_ai, year=year_ai))
+( soil1 = site %>% full_join(y=soil, by="site_id") %>% rename(doy = doy_st, year=year_st))
 ```
-
-# Filter by hemisphere
 
 ```{r}
-( air_west = air1 %>% filter(lon < 0) %>% drop_na(air_t) %>% mutate(combo = as.integer(interaction(lat,lon,drop = TRUE))))
-( soil_west = soil1 %>% filter(lon < 0) %>% drop_na(soil_t) %>% mutate(combo = as.integer(interaction(lat,lon,drop = TRUE))))
-( air_east = air1 %>% filter(lon > 0) %>% drop_na(air_t) %>% mutate(combo = as.integer(interaction(lat,lon,drop = TRUE))))
-( soil_east = soil1 %>% filter(lon > 0) %>% drop_na(soil_t)%>% mutate(combo = as.integer(interaction(lat,lon,drop = TRUE))))
+( data = air1 %>% full_join(y=soil1, by=c('site_id', 'lat', 'lon', 'doy', 'year', 'ctbr_id')))
 ```
+# Filter by hemisphere
+```{r}
+( data_west = data %>% 
+    filter(lon < 0) %>% 
+    drop_na(air_t) %>% 
+    drop_na(soil_t) %>% 
+    mutate(combo = as.integer(interaction(lat,lon,drop = TRUE)))
+  )
+
+
+( data_east = data %>% 
+    filter(lon > 0) %>% 
+    drop_na(air_t) %>% 
+    drop_na(soil_t) %>% 
+    mutate(combo = as.integer(interaction(lat,lon,drop = TRUE)))
+  )
+```
+
+
+
 
 # Unique pairs of lat lon
 ## East hemisphere
@@ -161,7 +178,7 @@ theme_set(theme_minimal())
 
 ```{r}
 
-  ggplot(data = soilEastLat1, aes(x=doy_st, y=mean_soil_t, color=as.factor(st_depth)))  +
+(plot_russia =  ggplot(data = soilEastLat1, aes(x=doy_st, y=mean_soil_t, color=as.factor(st_depth)))  +
   geom_line() +
   geom_line(data = airEastLat1, aes(x=doy_ai, y=mean_air_t),color = "black") +
   geom_vline(xintercept=240, colour = "#fdae61") + 
@@ -172,7 +189,9 @@ theme_set(theme_minimal())
   xlab("Julian date") +
   ylab("Temperature (Celecius)") + 
   geom_text(aes(x=240, y= 20, label="Russia (68.75556, 161.45570)"), colour = "black") +
-  theme(legend.position = "bottom")
+  theme(legend.position = c(0.85, 0.7))
+ 
+)
 
 
 ```
@@ -204,7 +223,7 @@ target_ca = c(104)
 
 ```{r}
 
-  ggplot(data = soilWestLat1, aes(x=doy_st, y=mean_soil_t, color=as.factor(st_depth)))  +
+(plot_canada1 =  ggplot(data = soilWestLat1, aes(x=doy_st, y=mean_soil_t, color=as.factor(st_depth)))  +
   geom_line() +
   geom_line(data = airWestLat1, aes(x=doy_ai, y=mean_air_t),color = "black") +
   geom_vline(xintercept=215, colour = "#fdae61") + 
@@ -212,16 +231,13 @@ target_ca = c(104)
   geom_vline(xintercept=257, colour = "#fdae61") + 
   geom_vline(xintercept=264, colour="#fdae61") +
   geom_hline(yintercept=0, colour="#d7191c") + 
-  facet_wrap(~combo, nrow = 3) +
   scale_color_viridis_d(name = "Depth (cm)") +
   xlab("Julian date") +
   ylab("Temperature (Celecius)") +
   geom_text(aes(x=240, y= 20, label=""), colour = "black") +
-  theme(legend.position = "bottom") +
+  theme(legend.position = c(0.85, 0.8))+
   geom_text(aes(x=240, y= 20, label="Canada (62.24500, -121.57100)"), colour = "black") 
-	
-
-
+)
 ```
 
 ### Canada
@@ -303,6 +319,12 @@ target_us = c(45, 46, 60, 85)
 ```
 
 ```{r}
+soil_west %>% 
+    filter(combo ==60) %>%
+    filter(st_depth < 60) %>%
+  filter(doy_st %in% (200:285)) %>%
+  group_by(combo, st_depth, doy_st)
+
 ( soilWestLat4 = soil_west %>% 
     filter(combo ==60) %>%
     filter(st_depth < 60) %>%
@@ -318,23 +340,24 @@ target_us = c(45, 46, 60, 85)
   summarize(mean_air_t = mean(air_t))
 )
 ```
-
+65.69439	-149.1316	
 ```{r}
 
-  ggplot(data = soilWestLat4, aes(x=doy_st, y=mean_soil_t, color=as.factor(st_depth)))  +
+(plot_AK =  ggplot(data = soilWestLat4, aes(x=doy_st, y=mean_soil_t, color=as.factor(st_depth)))  +
   geom_line() +
   geom_line(data = airWestLat4, aes(x=doy_ai, y=mean_air_t),color = "black") +
   geom_vline(xintercept=215, colour = "#fdae61") + # Aug 3
   geom_vline(xintercept=260, colour="#fdae61") + #Sept 24
   geom_hline(yintercept=0, colour="#d7191c") + 
-  facet_wrap(~combo, nrow = 2) +
-  scale_color_viridis_d(name = "Depth (cm)") +
+  scale_colour_brewer(palette = "Set1", name = "Depth (cm)") +
   xlab("Julian date") +
   ylab("Temperature (Celecius)") +
   geom_text(aes(x=215, y=-5,label="Aug 3"), colour = "black", angle=90, vjust = -0.5, size=2) +
   geom_text(aes(x=260, y=-5, label="Sept 17"),colour = "black", angle=90, vjust = -0.5, size=2) + 
   geom_text(aes(x=240, y= 20, label=""), colour = "black") +
-  theme(legend.position = "right")
+  theme(legend.position = c(0.85, 0.7)) +
+  geom_text(aes(x=240, y= 20, label="Alaska (65.69439, -149.1316)"), colour = "black")
+)
 
 
 ```
@@ -365,14 +388,19 @@ target_us = c(45, 46, 60, 85)
   geom_vline(xintercept=260, colour="#fdae61") + #Sept 24
   geom_hline(yintercept=0, colour="#d7191c") + 
   facet_wrap(~combo, nrow = 2) +
-  scale_color_viridis_d(name = "Depth (cm)") +
+  scale_colour_brewer(palette = "Set1", name = "Depth (cm)") +
   xlab("Julian date") +
   ylab("Temperature (Celecius)") +
   geom_text(aes(x=215, y=-5,label="Aug 3"), colour = "black", angle=90, vjust = -0.5, size=2) +
   geom_text(aes(x=260, y=-5, label="Sept 17"),colour = "black", angle=90, vjust = -0.5, size=2) + 
   geom_text(aes(x=240, y= 20, label=""), colour = "black") +
-  theme(legend.position = "right")
+  theme(legend.position = c(0.85, 0.7)) +
+  geom_text(aes(x=240, y= 20, label=""), colour = "black")
 
 
 ```
 
+# Combine
+```{r}
+cowplot::plot_grid(plot_russia, plot_canada1)
+```
