--- a/scripts/SoilAirTemp.Rmd
+++ b/scripts/SoilAirTemp.Rmd
@@ -51,6 +51,9 @@ reg_theme = theme_bw() + theme(legend.position = "bottom") +
 
 ```
 
+```{r}
+theme_set(theme_minimal())
+```
 # Data 
 
 ```{r}
@@ -111,7 +114,7 @@ unique(soil$st_depth)
  Sizov    RU 65.85096 74.38171 
  Delcourt-Veraverbeke      RU 62.07247 125.8988 
 ```{r}
-unique(air_east[c( "site_id","lat","lon", "combo")])
+unique(data_east[c( "site_id","lat","lon", "combo")])
 ```
 
 ## Western Hemisphere
@@ -135,57 +138,44 @@ unique(air_west[c( "site_id","lat","lon", "combo")])
 # Filter based on matching temperature for date
 ## Eastern
 ```{r}
-soil_east %>% 
+data_east %>% 
     filter(combo ==11) %>%
     filter(st_depth < 60) %>%
   filter(doy_st %in% (200:285)) %>%
-  group_by(st_depth, doy_st) %>%
+  group_by(st_depth, doy) %>%
   filter(soil_t==soil_t)
-
-
-air_east %>% 
-  filter(combo ==11) %>%
-  filter(doy_ai %in% (200:285)) %>%
-  filter(air_t<0)
 
 ```
 
 
 
 # Summarize & Plot
-```{r}
-theme_set(theme_minimal())
-```
+
 ## Eastern Hemisphere
 
 
 ```{r}
-( soilEastLat1 = soil_east %>% 
+( dataEast1 = data_east %>% 
     filter(combo ==11) %>%
     filter(st_depth < 60) %>%
-  filter(doy_st %in% (200:285)) %>%
-  group_by(combo, st_depth, doy_st) %>%
-  summarize(mean_soil_t = mean(soil_t))
+  filter(doy %in% (200:285)) %>%
+  group_by(combo, st_depth, doy) %>%
+  summarize(mean_soil_t = mean(soil_t),
+            mean_air_t = mean(air_t))
 )
 
-( airEastLat1 = air_east %>% 
-  filter(combo ==11) %>%
-  filter(doy_ai %in% (200:285)) %>%
-  group_by(combo, doy_ai) %>%
-  summarize(mean_air_t = mean(air_t))
-)
 ```
-
+### Plot Russia
 ```{r}
 
-(plot_russia =  ggplot(data = soilEastLat1, aes(x=doy_st, y=mean_soil_t, color=as.factor(st_depth)))  +
-  geom_line() +
-  geom_line(data = airEastLat1, aes(x=doy_ai, y=mean_air_t),color = "black") +
+(plot_russia =  ggplot(data = dataEast1)  +
+  geom_line(aes(x=doy, y=mean_soil_t, color=as.factor(st_depth))) +
+  geom_line(aes(x=doy, y=mean_air_t),color = "black") +
   geom_vline(xintercept=240, colour = "#fdae61") + 
   geom_vline(xintercept=254, colour="#fdae61") + 
   geom_vline(xintercept=264, colour="#fdae61") + 
   geom_hline(yintercept=0, colour="#d7191c") + 
-  scale_color_viridis_d(name = "Depth (cm)") +
+  scale_colour_brewer(palette = "Set1", name = "Depth (cm)") +
   xlab("Julian date") +
   ylab("Temperature (Celecius)") + 
   geom_text(aes(x=240, y= 20, label="Russia (68.75556, 161.45570)"), colour = "black") +
@@ -205,38 +195,31 @@ target_ca = c(104)
 ```
 
 ```{r}
-( soilWestLat1 = soil_west %>% 
+( dataWest1 = data_west %>% 
     filter(combo %in% target_ca) %>%
     filter(st_depth < 60) %>%
-  filter(doy_st %in% (200:285)) %>%
-  group_by(combo, st_depth, doy_st) %>%
-  summarize(mean_soil_t = mean(soil_t))
+  filter(doy %in% (200:285)) %>%
+  group_by(combo, st_depth, doy) %>%
+  summarize(mean_soil_t = mean(soil_t),
+            mean_air_t = mean(air_t))
 )
 
-( airWestLat1 = air_west %>% 
-  filter(combo %in% target_ca) %>%
-  filter(doy_ai %in% (200:285)) %>%
-  group_by(combo, doy_ai) %>%
-  summarize(mean_air_t = mean(air_t))
-)
 ```
-
+### Plot Canada
 ```{r}
 
-(plot_canada1 =  ggplot(data = soilWestLat1, aes(x=doy_st, y=mean_soil_t, color=as.factor(st_depth)))  +
-  geom_line() +
-  geom_line(data = airWestLat1, aes(x=doy_ai, y=mean_air_t),color = "black") +
-  geom_vline(xintercept=215, colour = "#fdae61") + 
-  geom_vline(xintercept=225, colour = "#fdae61") + 
+(plot_canada1 =  ggplot(data = dataWest1)  +
+  geom_line(aes(x=doy, y=mean_soil_t, color=as.factor(st_depth))) +
+  geom_line(aes(x=doy, y=mean_air_t),color = "black") +
   geom_vline(xintercept=257, colour = "#fdae61") + 
   geom_vline(xintercept=264, colour="#fdae61") +
   geom_hline(yintercept=0, colour="#d7191c") + 
-  scale_color_viridis_d(name = "Depth (cm)") +
+  scale_colour_brewer(palette = "Set1", name = "Depth (cm)") +
   xlab("Julian date") +
   ylab("Temperature (Celecius)") +
-  geom_text(aes(x=240, y= 20, label=""), colour = "black") +
+  geom_text(aes(x=265, y= 20, label=""), colour = "black") +
   theme(legend.position = c(0.85, 0.8))+
-  geom_text(aes(x=240, y= 20, label="Canada (62.24500, -121.57100)"), colour = "black") 
+  geom_text(aes(x=265, y= 20, label="Canada (62.24500, -121.57100)"), colour = "black") 
 )
 ```
 
@@ -246,27 +229,22 @@ target_us = c(45, 46, 60, 85)
 ```
 
 ```{r}
-( soilWestLat2 = soil_west %>% 
+( dataWest2 = data_west %>% 
     filter(combo ==45) %>%
     filter(st_depth < 60) %>%
-  filter(doy_st %in% (200:285)) %>%
-  group_by(combo, st_depth, doy_st) %>%
-  summarize(mean_soil_t = mean(soil_t))
+  filter(doy %in% (200:285)) %>%
+  group_by(combo, st_depth, doy) %>%
+  summarize(mean_soil_t = mean(soil_t),
+            mean_air_t = mean(air_t))
 )
 
-( airWestLat2 = air_west %>% 
-  filter(combo ==45) %>%
-  filter(doy_ai %in% (200:285)) %>%
-  group_by(combo, doy_ai) %>%
-  summarize(mean_air_t = mean(air_t))
-)
 ```
 
 ```{r}
 
-  ggplot(data = soilWestLat2, aes(x=doy_st, y=mean_soil_t, color=as.factor(st_depth)))  +
-  geom_line() +
-  geom_line(data = airWestLat2, aes(x=doy_ai, y=mean_air_t),color = "black") +
+  ggplot(data = dataWest2)  +
+  geom_line(aes(x=doy, y=mean_soil_t, color=as.factor(st_depth))) +
+  geom_line(aes(x=doy, y=mean_air_t),color = "black") +
   geom_vline(xintercept=215, colour = "#fdae61") + # Aug 3
   geom_vline(xintercept=260, colour="#fdae61") + #Sept 24
   geom_hline(yintercept=0, colour="#d7191c") + 
@@ -319,41 +297,28 @@ target_us = c(45, 46, 60, 85)
 ```
 
 ```{r}
-soil_west %>% 
+( dataWest4 = data_west %>% 
     filter(combo ==60) %>%
     filter(st_depth < 60) %>%
-  filter(doy_st %in% (200:285)) %>%
-  group_by(combo, st_depth, doy_st)
-
-( soilWestLat4 = soil_west %>% 
-    filter(combo ==60) %>%
-    filter(st_depth < 60) %>%
-  filter(doy_st %in% (200:285)) %>%
-  group_by(combo, st_depth, doy_st) %>%
-  summarize(mean_soil_t = mean(soil_t))
+  filter(doy %in% (200:285)) %>%
+  group_by(combo, st_depth, doy) %>%
+  summarize(mean_soil_t = mean(soil_t),
+            mean_air_t = mean(air_t))
 )
 
-( airWestLat4 = air_west %>% 
-  filter(combo ==60) %>%
-  filter(doy_ai %in% (200:285)) %>%
-  group_by(combo, doy_ai) %>%
-  summarize(mean_air_t = mean(air_t))
-)
 ```
 65.69439	-149.1316	
 ```{r}
 
-(plot_AK =  ggplot(data = soilWestLat4, aes(x=doy_st, y=mean_soil_t, color=as.factor(st_depth)))  +
-  geom_line() +
-  geom_line(data = airWestLat4, aes(x=doy_ai, y=mean_air_t),color = "black") +
+(plot_AK =  ggplot(data = dataWest4)  +
+  geom_line(aes(x=doy, y=mean_soil_t, color=as.factor(st_depth))) +
+  geom_line(aes(x=doy, y=mean_air_t),color = "black") +
   geom_vline(xintercept=215, colour = "#fdae61") + # Aug 3
   geom_vline(xintercept=260, colour="#fdae61") + #Sept 24
   geom_hline(yintercept=0, colour="#d7191c") + 
   scale_colour_brewer(palette = "Set1", name = "Depth (cm)") +
   xlab("Julian date") +
   ylab("Temperature (Celecius)") +
-  geom_text(aes(x=215, y=-5,label="Aug 3"), colour = "black", angle=90, vjust = -0.5, size=2) +
-  geom_text(aes(x=260, y=-5, label="Sept 17"),colour = "black", angle=90, vjust = -0.5, size=2) + 
   geom_text(aes(x=240, y= 20, label=""), colour = "black") +
   theme(legend.position = c(0.85, 0.7)) +
   geom_text(aes(x=240, y= 20, label="Alaska (65.69439, -149.1316)"), colour = "black")
@@ -391,8 +356,6 @@ soil_west %>%
   scale_colour_brewer(palette = "Set1", name = "Depth (cm)") +
   xlab("Julian date") +
   ylab("Temperature (Celecius)") +
-  geom_text(aes(x=215, y=-5,label="Aug 3"), colour = "black", angle=90, vjust = -0.5, size=2) +
-  geom_text(aes(x=260, y=-5, label="Sept 17"),colour = "black", angle=90, vjust = -0.5, size=2) + 
   geom_text(aes(x=240, y= 20, label=""), colour = "black") +
   theme(legend.position = c(0.85, 0.7)) +
   geom_text(aes(x=240, y= 20, label=""), colour = "black")
@@ -401,6 +364,12 @@ soil_west %>%
 ```
 
 # Combine
+```{r fig.height=7, fig.width=5}
+( 
+  gridPlot1 = cowplot::plot_grid(plot_russia, plot_canada1, plot_AK, nrow=3)
+)
+```
+
 ```{r}
-cowplot::plot_grid(plot_russia, plot_canada1)
+ggsave("../figures/SoilAirTempPlot.jpeg", plot = gridPlot1,  dpi = 300, width=5, height=7, unit="in", bg="white")
 ```
